Added MC server

--- a/index.html
+++ b/index.html
@@ -223,20 +223,20 @@
 
             <!-- Subdomain 2 -->
             <div class="nav-item">
-                <a href="https://subdomain2.yanbouw.com" class="nav-button">
-                    [ WORK IN PROGRESS ]
+                <a href="https://yanbouw.com/Minecraf-Server-Status-Site/" class="nav-button">
+                    [ MINECRAFT SERVER ]
                 </a>
                 <div class="popup">
                     <div class="popup-arrow"></div>
-                    <div class="popup-header">SUBDOMAIN 2 PLACEHOLDER</div>
+                    <div class="popup-header">THE MINECRAFT SERVER</div>
                     <div class="popup-image">
-                        <img src="Placeholder.png" alt="Subdomain 2">
+                        <img src="MCStatus.png" alt="Subdomain 2">
                     </div>
                     <div class="popup-content">
-                        THIS DOMAIN IS WORK IN PROGRESS
+                        A MINECRAFT SERVER WITH MODDING CAPABILITIES
                     </div>
                     <div class="popup-progress">
-                        UNRELEASED
+                        FINISHED
                     </div>
                 </div>
             </div>
