--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     <div class="popup-arrow"></div>
                     <div class="popup-header">// SAMBUCAFLIX</div>
                     <div class="popup-image">
-                        <img src="Sambucaflix.png" alt="Subdomain 1">
+                        <img src="Sambucaflix.png" alt="Sambucaflix">
                     </div>
                     <div class="popup-content">
                         VIDEO STREAMING REIMAGINED WITH THIS PRIVATE VIDEO STREAMING SERVICE POWERD BY JELLYFIN AND THE POWER OF THE RASPI4.
@@ -230,7 +230,7 @@
                     <div class="popup-arrow"></div>
                     <div class="popup-header">THE MINECRAFT SERVER</div>
                     <div class="popup-image">
-                        <img src="MCStatus.png" alt="Subdomain 2">
+                        <img src="MCStatus.png" alt="Minecraft Server">
                     </div>
                     <div class="popup-content">
                         A MINECRAFT SERVER WITH MODDING CAPABILITIES
